--- a/service.html
+++ b/service.html
@@ -118,7 +118,7 @@
                 <div class="data">
                     <IMG src="html-coding.png" class="htm">
                     <h2 class="title-heading">Web Design</h2>
-                    <p>I have basic knowledge of HTML and CSS.</p><br><br>
+                    <p>I have good knowledge in HTML, CSS and JavaScript.</p><br><br>
                     <a href="#" class="btn">learn more</a>
                 </div>
                 <!-- <div class="data">
